# NoTomorrow

./: .env.example  .gitignore  README.md  biome.json  docker-compose.override.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
apps/coach/: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  pyproject.toml
apps/coach/evals/: runner.py
apps/coach/evals/cases/coach-daily/: active-week.json
apps/coach/evals/cases/proof-grade/: broken-link.json  clean-ship.json
apps/coach/evals/cases/roadmap-generate/: pomodoro-1m.json
apps/coach/evals/cases/roadmap-recalibrate/: on-pace.json
apps/coach/scripts/: gen_pydantic.py
apps/coach/src/coach/: __init__.py  auth.py  db.py  main.py  prompts.py  settings.py
apps/coach/src/coach/llm/: __init__.py  client.py  persona.py
apps/coach/src/coach/routers/: __init__.py  chat.py  daily.py  health.py  proof.py  roadmap.py
apps/coach/src/coach/schemas/: __init__.py  generated.py
apps/coach/tests/: conftest.py  test_auth.py  test_chat.py  test_daily.py  test_evals_runner.py  test_health.py  test_prompts.py  test_proof.py  test_roadmap.py
apps/desktop/: electron-builder.yml  package.json  tsconfig.json
apps/web/: PLAN.md  README.md  (+5 more)
arch/: 01-product.md  02-domain-model.md  03-rating-system.md  04-frontend.md  05-backend.md  06-coach-loop.md  07-api.md  08-mvp.md  09-risks.md  10-repo-layout.md  CHANGELOG.md  README.md  TRACKER.md
scripts/: PLAN.md  README.md  check-env.ts  db-reset.ts  dev-web.sh  gen-pydantic.ts  install-desktop.sh  seed.ts
(+85 files in other folders)
